--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: artmented-app
     env: node
+    rootDir: .
     buildCommand: npm install
     startCommand: npm start
     envVars:
